--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+slowmovideo (0.5+git20190116-3) unstable; urgency=medium
+
+  * Upload to unstable.
+  * Bump standards version to 4.4.1.
+
+ -- Gürkan Myczko <gurkan@phys.ethz.ch>  Mon, 28 Oct 2019 14:02:42 +0100
+
+slowmovideo (0.5+git20190116-2) experimental; urgency=medium
+
+  * Apply patch for opencv4 to fix FTBFS. (Closes: #922598)
+  * Bump standards version to 4.4.0.
+
+ -- Gürkan Myczko <gurkan@phys.ethz.ch>  Fri, 06 Sep 2019 11:08:02 +0200
+
 slowmovideo (0.5+git20190116-1) unstable; urgency=medium
 
   * Initial release. (Closes: #717369)
