--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
+slowmovideo (0.5+git20190116-3+flowBuilder~bpo.buster) Lumiera-buster-tools; urgency=low
+
+  * Backport to Debian-Buster(stable)
+  * linked against OpenCV 3.2
+  * unofficial custom package
+
+ -- Hermann Vosseler <deb@ichthyostega.de>  Sun, 12 Jan 2020 01:50:34 +0100
+
 slowmovideo (0.5+git20190116-3+flowBuilder.bullseye) UNRELEASED; urgency=low
 
   * Ensure the Flow-Builder (GPU support) is enabled.
   * to make this happen, need additionally freeglut-3 and libglew-dev
-  * inofficial custom package by Ichthyostega
+  * unofficial custom package by Ichthyostega
 
  -- Hermann Vosseler <deb@ichthyostega.de>  Sun, 12 Jan 2020 01:45:07 +0100
 
